test-cases/final-dump/io_flow_error.wybe
def woops use io {
    !println("hello world!")
}

use io in {
    !println("shouldn't be allowed.")
}

!woops
